tweaked legend to fix alignment error.

--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -17,9 +17,9 @@ html {
 }
 
 .legend i {
-  width: 18px;
+  width: 25px;
   height: 18px;
   float: left;
-  margin-right: 8px;
+  margin-right: 10px;
   opacity: 0.7;
 }
